fixed card item overflow and fixed card item input styling

--- a/styles/app/Card.module.scss
+++ b/styles/app/Card.module.scss
@@ -102,6 +102,8 @@
                 grid-template-columns: 16px auto 10px;
                 grid-gap: .2em;
                 width: auto;
+                overflow: hidden;
+                text-overflow: ellipsis;
 
                 .crossed {
                     text-decoration: line-through;
@@ -119,7 +121,7 @@
 
 
                     &:focus {
-                        // outline: none;
+                        outline: none;
                     }
                 }
 
